--- a/caffe.topmonks.cz/src/data/events/2018-11-01.md
+++ b/caffe.topmonks.cz/src/data/events/2018-11-01.md
@@ -1,6 +1,6 @@
 ---
 sessionNumber: 50
-title: "It depends" - designový team TopMonks o UX
+title: '"It depends" - designový team TopMonks o UX'
 shortTitle: UX téma
 lecturers: Pavel Trnka, Radek Jakl, Tomáš Paulus
 date: 1. listopadu 2018
