--- a/caffe.topmonks.cz/src/data/events/2018-11-01.mdx
+++ b/caffe.topmonks.cz/src/data/events/2018-11-01.mdx
@@ -1,12 +1,12 @@
 ---
 sessionNumber: 50
-title: '"It depends" - designový team TopMonks o UX'
+title: It depends
 shortTitle: UX téma
-lecturers: Pavel Trnka, Radek Jakl, Tomáš Paulus
+lecturers: Pavel Trnka
 date: 1. listopadu 2018
 address: Jamm Club, Pod kaštany 3, 160 00 Praha
 mapLink: https://goo.gl/maps/D2WMNNpDZ9D2
-link: https://www.facebook.com/events/294980417665663/
+link: https://www.meetup.com/TopMonks-Caffe/events/255606837/
 picture: /images/posters-small/empty.png
 presentationLink:
 videoLink:
