--- a/caffe.topmonks.cz/src/data/events/2018-12-06.mdx
+++ b/caffe.topmonks.cz/src/data/events/2018-12-06.mdx
@@ -2,11 +2,11 @@
 sessionNumber: 51
 title: Chatboti
 shortTitle: Chatboti
-lecturers: Jirka Pénzeš, Karel Ploc, Dan Hromada
+lecturers: Jirka Pénzeš
 date: 6. prosince 2018
 address: Jamm Club, Pod kaštany 3, 160 00 Praha
 mapLink: https://goo.gl/maps/D2WMNNpDZ9D2
-link: https://www.facebook.com/events/294980417665663/
+link: https://www.meetup.com/TopMonks-Caffe/events/256540509/
 picture: /images/posters-small/empty.png
 presentationLink:
 videoLink:
