--- a/caffe.topmonks.cz/src/data/events/2019-01-10.md
+++ b/caffe.topmonks.cz/src/data/events/2019-01-10.md
@@ -2,11 +2,11 @@
 sessionNumber: 52
 title: DevOps a Akcelerace byznysu
 shortTitle: DevOps
-lecturers: Aleš Roubíček, Jiří "Filemon" Fabián
+lecturers: Aleš Roubíček, Jiří Fabián
 date: 10. ledna 2019
-address: Jamm Club, Pod kaštany 3, 160 00 Praha
+address: Jamm Club<br>Pod kaštany 3, 160 00 Praha
 mapLink: https://goo.gl/maps/D2WMNNpDZ9D2
-link: https://www.facebook.com/events/294980417665663/
+link: https://www.meetup.com/TopMonks-Caffe/events/257611074/
 picture: /images/posters-small/empty.png
 presentationLink:
 videoLink:
