Fixed TM Caffe events listing to something fail proof

--- a/caffe.topmonks.cz/src/data/events/2018-11-01.md
+++ b/caffe.topmonks.cz/src/data/events/2018-11-01.md
@@ -1,7 +1,7 @@
 ---
 sessionNumber: 50
-title: It depends
-shortTitle: UX téma
+title: It depends - designeři TopMonks o UX
+shortTitle: It depends
 lecturers: Pavel Trnka
 date: 1. listopadu 2018
 address: Jamm Club, Pod kaštany 3, 160 00 Praha
