--- a/caffe.topmonks.cz/src/data/events/2019-01-10.md
+++ b/caffe.topmonks.cz/src/data/events/2019-01-10.md
@@ -1,7 +1,7 @@
 ---
 sessionNumber: 52
 title: DevOps a Akcelerace byznysu
-shortTitle: DevOps
+shortTitle: DevOps a Akcelerace byznysu
 lecturers: Aleš Roubíček, Jiří Fabián
 date: 10. ledna 2019
 address: Jamm Club<br>Pod kaštany 3, 160 00 Praha
