--- a/caffe.topmonks.cz/src/data/events/2017-10-12.md
+++ b/caffe.topmonks.cz/src/data/events/2017-10-12.md
@@ -7,7 +7,7 @@ date: 12. října 2017
 address: Loft N8, Nekázanka 8, Praha 1
 mapLink: https://goo.gl/maps/TiqAbr4sRTB2
 link: https://www.facebook.com/events/2004956993116250/
-picture: /images/posters-small/2017-10-12.jpg
+picture: /images/posters-small/empty.png
 presentationLink:
 videoLink: https://youtu.be/8CWSuWSwtFU
 ---
