--- a/caffe.topmonks.cz/src/data/events/2017-11-02.md
+++ b/caffe.topmonks.cz/src/data/events/2017-11-02.md
@@ -7,7 +7,7 @@ date: 2. listopadu 2017
 address: Loft N8<br> Nekázanka 8, Praha 1
 mapLink: https://goo.gl/maps/TiqAbr4sRTB2
 link: https://www.facebook.com/events/294980417665663/
-picture: /images/posters-small/2017-11-02.jpg
+picture: /images/posters-small/empty.png
 presentationLink:
 videoLink:
 ---
