Added missing cafes

--- a/caffe.topmonks.cz/src/data/events/2018-11-01.md
+++ b/caffe.topmonks.cz/src/data/events/2018-11-01.md
@@ -1,8 +1,8 @@
 ---
-sessionNumber: 50
+sessionNumber: 51
 title: It depends - designeři TopMonks o UX
 shortTitle: It depends
-lecturers: Pavel Trnka
+lecturers: Pavel Trnka, Radek Jakl, Tomáš Paulus
 date: 1. listopadu 2018
 address: Jamm Club, Pod kaštany 3, 160 00 Praha
 mapLink: https://goo.gl/maps/D2WMNNpDZ9D2
