--- a/caffe.topmonks.cz/src/data/events/2018-12-06.md
+++ b/caffe.topmonks.cz/src/data/events/2018-12-06.md
@@ -1,8 +1,8 @@
 ---
-sessionNumber: 51
+sessionNumber: 52
 title: Chatboti
 shortTitle: Chatboti
-lecturers: Jirka Pénzeš
+lecturers: Jirka Pénzeš, Karel Ploc, Dan Hromada
 date: 6. prosince 2018
 address: Jamm Club, Pod kaštany 3, 160 00 Praha
 mapLink: https://goo.gl/maps/D2WMNNpDZ9D2
