Added DevOps poster

--- a/caffe.topmonks.cz/src/data/events/2019-01-10.md
+++ b/caffe.topmonks.cz/src/data/events/2019-01-10.md
@@ -7,7 +7,7 @@ date: 10. ledna 2019
 address: Jamm Club<br>Pod kaštany 3, 160 00 Praha
 mapLink: https://goo.gl/maps/D2WMNNpDZ9D2
 link: https://www.meetup.com/TopMonks-Caffe/events/257611074/
-picture: /images/posters-small/empty.png
+picture: /images/posters-small/2019-01-10.jpg
 presentationLink:
 videoLink:
 ---
