update informací (těsně před spuštěním)

--- a/caffe.topmonks.cz/src/data/events/2019-02-07.mdx
+++ b/caffe.topmonks.cz/src/data/events/2019-02-07.mdx
@@ -1,12 +1,12 @@
 ---
 sessionNumber: 54
-title: DevOps a Akcelerace byznysu
-shortTitle: DevOps a Akcelerace byznysu
-lecturers: Aleš Roubíček, Jiří Fabián
-date: 10. ledna 2019
+title: Bleskové kryptoměny - Lightning Network a State Channels
+shortTitle: Bleskové kryptoměny
+lecturers: Martin „kixunil“ Habovštiak, Ondrej Sarnecký
+date: 7. února 2019
 address: Jamm Club<br>Pod kaštany 3, 160 00 Praha
 mapLink: https://goo.gl/maps/D2WMNNpDZ9D2
-link: https://www.meetup.com/TopMonks-Caffe/events/257611074/
+link: https://www.meetup.com/TopMonks-Caffe/events/258122001/
 picture: /images/posters-small/empty.png
 presentationLink:
 videoLink:
