Úpravy MD s plagátmi

--- a/caffe.topmonks.cz/src/data/events/2018-10-04.md
+++ b/caffe.topmonks.cz/src/data/events/2018-10-04.md
@@ -1,13 +1,13 @@
 ---
 sessionNumber: 50
-title: Fungování decentralizovaných společností 
+title: Fungování decentralizovaných společností
 shortTitle: Fungování decentralizovaných společností
 lecturers: Jiří Fabián, Aleš Roubíček
 date: 4. října 2018
 address: Jamm Club, Pod kaštany 3, 160 00 Praha
 mapLink: https://goo.gl/maps/D2WMNNpDZ9D2
 link: https://www.meetup.com/TopMonks-Caffe/events/255133039/
-picture: /images/posters-small/empty.png
+picture: /images/posters-small/2018-10-04.jpg
 presentationLink:
 videoLink:
 ---
