--- a/caffe.topmonks.cz/src/data/events/2019-04-04.md
+++ b/caffe.topmonks.cz/src/data/events/2019-04-04.md
@@ -1,7 +1,7 @@
 ---
 sessionNumber: 56
 title: "Figma 101: Designový tool pro vaši firmu"
-shortTitle: Figma 101
+shortTitle: Figma 101: Designový tool pro vaši firmu
 lecturers: Tom Paulus, Jozef Sovčík
 date: 4. dubna 2019
 address: Jamm Club<br>Pod kaštany 3, 160 00 Praha
