--- a/caffe.topmonks.cz/src/data/events/2019-06-06.md
+++ b/caffe.topmonks.cz/src/data/events/2019-06-06.md
@@ -7,7 +7,7 @@ date: 6. června 2019
 address: OSSEGG Praha, Římská 2135/45 · Praha-Vinohrady
 mapLink: https://goo.gl/maps/eYABMUD8hRXwWJ499
 link: https://www.meetup.com/TopMonks-Caffe/events/261837080/
-picture: /images/posters-small/2019-06-06.jpg"
+picture: /images/posters-small/2019-06-06.jpg
 presentationLink:
 videoLink:
 ---
