--- a/caffe.topmonks.cz/src/data/events/2019-02-07.md
+++ b/caffe.topmonks.cz/src/data/events/2019-02-07.md
@@ -7,6 +7,7 @@ date: 7. února 2019
 address: Jamm Club<br>Pod kaštany 3, 160 00 Praha
 mapLink: https://goo.gl/maps/D2WMNNpDZ9D2
 link: https://www.meetup.com/TopMonks-Caffe/events/258122001/
+picture: /images/posters-small/empty.png
 presentationLink:
 videoLink:
 ---
