Added lecturers Caffe.tm

--- a/caffe.topmonks.cz/src/data/events/2019-09-12.md
+++ b/caffe.topmonks.cz/src/data/events/2019-09-12.md
@@ -2,7 +2,7 @@
 sessionNumber: 61
 title:  Back to School Party v TopMonks
 shortTitle: Back to School Party
-lecturers: 
+lecturers: Alessio Busta, Fromen, MC Hanzo
 date: 12. září 2019 od 18.00 do 23.00
 address: TopMonks Studio, Struhařovská 2941/9, Praha 4 - Spořilov
 mapLink: https://www.google.com/maps/search/?api=1&query=50.045303%2C14.491339
