--- a/caffe.topmonks.cz/src/data/events/2019-09-12.md
+++ b/caffe.topmonks.cz/src/data/events/2019-09-12.md
@@ -7,7 +7,7 @@ date: 12. září 2019 od 18.00 do 23.00
 address: TopMonks Studio, Struhařovská 2941/9, Praha 4 - Spořilov
 mapLink: https://www.google.com/maps/search/?api=1&query=50.045303%2C14.491339
 link: https://www.meetup.com/TopMonks-Caffe/events/264494078/?rv=me1&_xtd=gatlbWFpbF9jbGlja9oAJDM0Mzc0ZTIzLWNlMjctNDZiMC05NTA1LWY4ZjNiOTBkOThhZA
-picture:
+picture: 2019-09-12.jpg
 presentationLink:
 videoLink:
 ---
