Poster for October Caffe

--- a/caffe.topmonks.cz/src/data/events/2019-10-01.md
+++ b/caffe.topmonks.cz/src/data/events/2019-10-01.md
@@ -7,7 +7,7 @@ date: 01. října 2019 od 19.00 do 22.00
 address: Loft N8, Nekázanka 8, Praha 1
 mapLink: https://goo.gl/maps/TiqAbr4sRTB2
 link: https://www.meetup.com/TopMonks-Caffe/events/265148796/
-picture: empty.png
+picture: 2019-10-01.jpg
 presentationLink:
 videoLink:
 ---
