--- a/caffe.topmonks.cz/src/data/events/2019-11-05.md
+++ b/caffe.topmonks.cz/src/data/events/2019-11-05.md
@@ -1,6 +1,6 @@
 ---
 sessionNumber: 63
-title: Budoucnost Etherea: WTF nebo FTW?
+title: "Budoucnost Etherea: WTF nebo FTW?"
 shortTitle: Budoucnost Etherea
 lecturers: Lea Petrášová, Ondra Svoboda, Lumír Mrkva
 date: 05. listopadu 2019 od 19.00 do 22.00
