Blockchain - articles' titles correction

--- a/blockchain.topmonks.com/src/data/articles/2019-12-10.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-12-10.md
@@ -1,5 +1,5 @@
 ---
-title: DeFi: Finanční systém 2.0 (VŠE, CO VÍME)
+title: "DeFi: Finanční systém 2.0 (VŠE, CO VÍME)"
 author: Josef Tětek
 authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
 published: 2019-12-10
