--- a/blockchain.topmonks.com/src/data/articles/2019-12-31.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-12-31.md
@@ -1,5 +1,5 @@
 ---
-title: Litecoin: příběh pokračuje, nebo zvoní umíráček?
+title: "Litecoin: příběh pokračuje, nebo zvoní umíráček?"
 author: Josef Tětek
 authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
 published: 2019-12-31
