[blockchain.topmonks.com] Images optimization

--- a/blockchain.topmonks.com/src/data/articles/2019-06-26.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-06-26.md
@@ -1,7 +1,7 @@
 ---
 title: Libra – kryptoměnový projekt společnosti Facebook
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-06-26
 link: https://www.alza.cz/libra-facebook?fbclid=IwAR3TNXBi_nofAycx7Dr2_QcmjcslyNhxAzumGReskgfYHJOPAR7cKjPw6OQ
 picture: 2019-06-26.jpg
