--- a/blockchain.topmonks.com/src/data/articles/2019-07-07.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-07-07.md
@@ -1,7 +1,7 @@
 ---
 title: Představuje projekt Libra of Facebooku ohrožení fintechu?
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-07-07
 link: https://tyinternety.cz/technologie/predstavuje-projekt-libra-of-facebooku-ohrozeni-fintechu-odpovida-reflex-miton-alza-pilulka-sporka-a-fintech-asociace/
 picture: 2019-06-26.jpg
