--- a/blockchain.topmonks.com/src/data/articles/2019-07-27(1).md
+++ b/blockchain.topmonks.com/src/data/articles/2019-07-27(1).md
@@ -1,7 +1,7 @@
 ---
 title: Lea Petrášová z TopMonks o decentralizaci firem a zvládání...
 author: Lea Petrášová
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088319/avatar/lea-petrasova.jpg
+authorImage: avatar/lea-petrasova.jpg
 published: 2019-07-27
 link: https://www.startupjobs.cz/newsroom/lea-petrasova-topmonks-organizujeme-se-sami
 picture: 2019-07-27(1).jpg
