--- a/blockchain.topmonks.com/src/data/articles/2019-07-27(2).md
+++ b/blockchain.topmonks.com/src/data/articles/2019-07-27(2).md
@@ -1,7 +1,7 @@
 ---
 title: Report from the Hackatoshi’s Flying Circuit
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-07-27
 link: https://hackernoon.com/report-from-the-hackatoshis-flying-circuit-v51kc3vl6
 picture: 2019-07-27(2).jpg
