--- a/blockchain.topmonks.com/src/data/articles/2019-07-29.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-07-29.md
@@ -1,7 +1,7 @@
 ---
 title: "Libra Investment Token: Crazy ROI"
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-07-29
 link: https://hackernoon.com/libra-investment-token-crazy-roi-z73tv3vz3
 picture: 2019-07-29.jpg
