--- a/blockchain.topmonks.com/src/data/articles/2019-08-20.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-08-20.md
@@ -1,7 +1,7 @@
 ---
 title: Bitcoin’s Security Budget is Adequate
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-08-20
 link: https://hackernoon.com/how-much-should-bitcoin-miners-earn-in-the-future-undy3vih
 picture: 2019-08-20.jpg
