--- a/blockchain.topmonks.com/src/data/articles/2019-09-05.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-09-05.md
@@ -1,7 +1,7 @@
 ---
 title: Sweet Berlin Street Art, oh and some EthBerlinZwei reflections as well
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-09-05
 link: https://hackernoon.com/sweet-berlin-street-art-oh-and-some-ethberlinzwei-reporting-as-well-dc263vmx
 picture: 2019-09-05.jpg
