--- a/blockchain.topmonks.com/src/data/articles/2019-10-02.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-10-02.md
@@ -1,7 +1,7 @@
 ---
 title: Bitcoin (vše, co chcete vědět)
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-10-02
 link: https://www.alza.cz/bitcoin
 picture: 2019-10-02.jpg
