--- a/blockchain.topmonks.com/src/data/articles/2019-10-12.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-10-12.md
@@ -1,7 +1,7 @@
 ---
 title: Až se budou hroutit ekonomiky, musí mít hlavouni cestu ven, říká Rosenberg
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-10-12
 link: https://www.penize.cz/svetova-ekonomika/410203-az-se-budou-hroutit-ekonomiky-musi-mit-hlavouni-cestu-ven-rika-rosenberg
 picture: 2019-10-12.jpg
