--- a/blockchain.topmonks.com/src/data/articles/2019-10-22.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-10-22.md
@@ -1,7 +1,7 @@
 ---
 title: "Ztracená budoucnost: Šílenství negativních úrokových sazeb"
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-10-22
 link: https://finmag.penize.cz/ekonomika/410356-ztracena-budoucnost-silenstvi-negativnich-urokovych-sazeb
 picture: 2019-10-22.jpg
