--- a/blockchain.topmonks.com/src/data/articles/2019-10-23.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-10-23.md
@@ -1,7 +1,7 @@
 ---
 title: "Ztracená budoucnost: korporace na oprátce"
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-10-23
 link: https://finmag.penize.cz/ekonomika/410398-ztracena-budoucnost-korporace-na-opratce
 picture: 2019-10-23.jpg
