--- a/blockchain.topmonks.com/src/data/articles/2019-11-07.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-11-07.md
@@ -1,7 +1,7 @@
 ---
 title: MakerDAO a DAI – úrok jako zlý sluha i špatný pán
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-11-07
 link: https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/
 picture: 2019-11-07.jpg
