--- a/blockchain.topmonks.com/src/data/articles/2019-08-12.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-08-12.md
@@ -1,7 +1,7 @@
 ---
 title: "Libra: The Ideavirus"
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-08-12
 link: https://hackernoon.com/libra-the-ideavirus-9u653vi0
 picture: 2019-08-12.jpg
