--- a/blockchain.topmonks.com/src/data/articles/2019-08-19.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-08-19.md
@@ -1,7 +1,7 @@
 ---
 title: Zorientujte se ve struktuře projektu Libra a jeho peněžních tocích
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-08-19
 link: https://tyinternety.cz/technologie/infografika-zorientujte-se-ve-strukture-projektu-libra-a-jeho-peneznich-tocich/
 picture: 2019-06-26.jpg
