--- a/blockchain.topmonks.com/src/data/articles/2019-09-10.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-09-10.md
@@ -1,7 +1,7 @@
 ---
 title: Interview with Bob Summerwill, Executive Director of ETC Cooperative
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-09-10
 link: https://hackernoon.com/interview-with-bob-summerwill-executive-director-of-etc-cooperative-l722c3w58
 picture: 2019-09-10.jpg
