--- a/blockchain.topmonks.com/src/data/articles/2019-11-06.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-11-06.md
@@ -1,7 +1,7 @@
 ---
 title: Číně vždycky vládl císař. Dnes se mu říka prezident ČLR.
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-11-06
 link: https://finmag.penize.cz/ekonomika/410686-cine-vzdycky-vladl-cisar-dnes-se-mu-rika-prezident-clr
 picture: 2019-11-06.jpg
