--- a/blockchain.topmonks.com/src/data/articles/2019-11-14.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-11-14.md
@@ -1,7 +1,7 @@
 ---
 title: MakerDAO – výhody, nevýhody a budoucnost projektu
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-11-14
 link: https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/
 picture: 2019-11-14.jpg
