--- a/blockchain.topmonks.com/src/data/articles/2019-12-10.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-12-10.md
@@ -1,7 +1,7 @@
 ---
 title: "DeFi: Finanční systém 2.0 (VŠE, CO VÍME)"
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-12-10
 link: https://www.alza.cz/defi-financni-system-2-0
 picture: 2019-12-10.jpeg
