--- a/blockchain.topmonks.com/src/data/articles/2019-12-31.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-12-31.md
@@ -1,7 +1,7 @@
 ---
 title: "Litecoin: příběh pokračuje, nebo zvoní umíráček?"
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-12-31
 link: https://btctip.cz/litecoin-pribeh-pokracuje-nebo-zvoni-umiracek/
 picture: 2019-12-31.jpg
