caffecko - oprava v titulku

--- a/caffe.topmonks.cz/src/data/events/2020-02-04.md
+++ b/caffe.topmonks.cz/src/data/events/2020-02-04.md
@@ -1,6 +1,6 @@
 ---
 sessionNumber: 66
-title: Únorové Cafféčko: Večer kreslení a malování
+title: "Únorové Cafféčko: Večer kreslení a malování"
 shortTitle: Večer kreslení a malování
 lecturers: Radek Jakl, Jiří Fabián, Emil Řezanina
 date: 04. února 2020 od 19.00 do 21.00
