[www.hlidacshopu.cz] Moving image assets to cloudinary auto upload facility

--- a/www.hlidacshopu.cz/src/data/media/2019-11-28-lupa.md
+++ b/www.hlidacshopu.cz/src/data/media/2019-11-28-lupa.md
@@ -2,7 +2,7 @@
 title: "Zmizely vám programy ČT? Za set-top box na poslední chvíli si připlatíte"
 url: https://www.lupa.cz/clanky/zmizely-vam-programy-ct-za-set-top-box-na-posledni-chvili-si-priplatite/
 published: 2019-11-28
-image: 2019-11-28-lupa.jpg
+image: 2019-11-28-lupa.png
 ---
 
 O&nbsp;půlnoci z&nbsp;27.&nbsp;na 28.&nbsp;listopadu 2019&nbsp;přestaly vysílače Žižkov a
