[blockchain.topmonks.com] Using Cloudinary upload for articles and podcasts

--- a/blockchain.topmonks.com/src/data/articles/2019-06-26.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-06-26.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-06-26
 link: https://www.alza.cz/libra-facebook?fbclid=IwAR3TNXBi_nofAycx7Dr2_QcmjcslyNhxAzumGReskgfYHJOPAR7cKjPw6OQ
-picture: 2019-06-26.jpg
+picture: articles/2019-06-26.jpg
 ---
 
 Facebook minulý týden představil světu svůj „kryptoměnový“ projekt Libra. Whitepaper je plný buzzwordů a kontradikcí. Nepřekvapivě se bude jednat o výrazně centralizovaný projekt. Přesto má velkou naději na úspěch a jeho dopad na kryptoměny lze zatím jen stěží odhadnout.
