--- a/blockchain.topmonks.com/src/data/articles/2019-07-07.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-07-07.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-07-07
 link: https://tyinternety.cz/technologie/predstavuje-projekt-libra-of-facebooku-ohrozeni-fintechu-odpovida-reflex-miton-alza-pilulka-sporka-a-fintech-asociace/
-picture: 2019-06-26.jpg
+picture: articles/2019-06-26.jpg
 ---
 
 V polovině června představila světu společnost Facebook projekt s názvem Libra. Libra se inspirovala kryptoměnami jako Bitcoin či Ethereum, ačkoli sama klasickou kryptoměnou není, jelikož se jedná o uzavřený projekt řízený konsorciem globálních korporací, sdružených ve vznikající organizaci Libra Association.
