--- a/blockchain.topmonks.com/src/data/articles/2019-07-27(1).md
+++ b/blockchain.topmonks.com/src/data/articles/2019-07-27(1).md
@@ -4,7 +4,7 @@ author: Lea Petrášová
 authorImage: avatar/lea-petrasova.jpg
 published: 2019-07-27
 link: https://www.startupjobs.cz/newsroom/lea-petrasova-topmonks-organizujeme-se-sami
-picture: 2019-07-27(1).jpg
+picture: articles/2019-07-27(1).jpg
 ---
 
 Slovenka Lea Petrášová po studiích v Brně přišla do Prahy, kde čtyři roky pracovala v nadnárodní korporaci. Když ze své pozice odcházela, měla na starosti tým padesáti lidí a uvědomila si, že už tuhle práci nemůže dělat. Načerpat další síly odjela do Barcelony, kam si koupila jednosměrnou letenku, a z původně měsíčního výletu se stal devítiměsíční sabatikl.
