--- a/blockchain.topmonks.com/src/data/articles/2019-07-27(2).md
+++ b/blockchain.topmonks.com/src/data/articles/2019-07-27(2).md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-07-27
 link: https://hackernoon.com/report-from-the-hackatoshis-flying-circuit-v51kc3vl6
-picture: 2019-07-27(2).jpg
+picture: articles/2019-07-27(2).jpg
 ---
 
 During the weekend of 19.-21.7. Paralelni Polis in Prague hosted its first hackathon. The 48-hour event fueled by free beer and Red Bull welcomed around 30 participants from around the world.
