--- a/blockchain.topmonks.com/src/data/articles/2019-07-29.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-07-29.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-07-29
 link: https://hackernoon.com/libra-investment-token-crazy-roi-z73tv3vz3
-picture: 2019-07-29.jpg
+picture: articles/2019-07-29.jpg
 ---
 
 The main focus on Libra so far was the stablecoin - a digital currency pegged to a basket of underlying assets. If the pegging mechanism works as intended, Libra coin won't undergo any crazy crypto pumps & dumps. Holders of Libra coin probably won't face any bigger risk than holding cash.
