--- a/blockchain.topmonks.com/src/data/articles/2019-08-12.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-08-12.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-08-12
 link: https://hackernoon.com/libra-the-ideavirus-9u653vi0
-picture: 2019-08-12.jpg
+picture: articles/2019-08-12.jpg
 ---
 
 The lid on the fabled "Facebook coin" project has been finally lifted in the middle of June. Libra, a name evoking an ancient unit of weight, scales of justice and a somewhat clever jab at Winklevoss' Gemini, has already been written about extensively.
