--- a/blockchain.topmonks.com/src/data/articles/2019-08-19.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-08-19.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-08-19
 link: https://tyinternety.cz/technologie/infografika-zorientujte-se-ve-strukture-projektu-libra-a-jeho-peneznich-tocich/
-picture: 2019-06-26.jpg
+picture: articles/2019-06-26.jpg
 ---
 
 V uplynulých dnech probíhaly v americkém Senátu slyšení týkající se projektu Libra, který byl světu představen společností Facebook v polovině června. Hlavní součástí projektu je digitální měna Libra coin, jenž má být spuštěn v polovině roku 2020.
