--- a/blockchain.topmonks.com/src/data/articles/2019-08-20.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-08-20.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-08-20
 link: https://hackernoon.com/how-much-should-bitcoin-miners-earn-in-the-future-undy3vih
-picture: 2019-08-20.jpg
+picture: articles/2019-08-20.jpg
 ---
 
 "In a few decades when the reward gets too small, the transaction fee will become the main compensation for nodes. I'm sure that in 20 years there will either be very large transaction volume or no volume."
