--- a/blockchain.topmonks.com/src/data/articles/2019-09-05.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-09-05.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-09-05
 link: https://hackernoon.com/sweet-berlin-street-art-oh-and-some-ethberlinzwei-reporting-as-well-dc263vmx
-picture: 2019-09-05.jpg
+picture: articles/2019-09-05.jpg
 ---
 
 I recently traveled to Berlin to take part in Berlin Blockchain week. From many of the week’s events, I visited two of the largest: dAppcon and ETHBerlinZwei.
