--- a/blockchain.topmonks.com/src/data/articles/2019-09-10.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-09-10.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-09-10
 link: https://hackernoon.com/interview-with-bob-summerwill-executive-director-of-etc-cooperative-l722c3w58
-picture: 2019-09-10.jpg
+picture: articles/2019-09-10.jpg
 ---
 
 During dAppcon, a recent conference in Berlin, I had a chance to talk to Bob Summerwill from the Ethereum Classic Cooperative (ECC).
