--- a/blockchain.topmonks.com/src/data/articles/2019-10-23.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-10-23.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-10-23
 link: https://finmag.penize.cz/ekonomika/410398-ztracena-budoucnost-korporace-na-opratce
-picture: 2019-10-23.jpg
+picture: articles/2019-10-23.jpg
 ---
 
 Paní krize klepe na vrátka a stav globálních financí je alarmující. V příštím propadu to pravděpodobně odnesou korporace, které se staly životně závislými na levném dluhu.
