--- a/blockchain.topmonks.com/src/data/articles/2019-11-07.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-11-07.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-11-07
 link: https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/
-picture: 2019-11-07.jpg
+picture: articles/2019-11-07.jpg
 ---
 
 V minulém dílu, nazvaném Půjčte si peníze na blockchainu – decentralizovaně a bez banky, jsme si osvětlili, jak MakerDAO a jeho decentralizovaný stablecoin DAI fungují. Nyní se pojďme podívat na problematické aspekty MakerDAO. Tím hlavním je, že úrok v kontextu dluhových pozic MakerDAO nefunguje jako standardní tržní úroková míra, tj. koordinační mechanismus poptávky a nabídky po půjčkách.
