--- a/blockchain.topmonks.com/src/data/articles/2019-11-11.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-11-11.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-11-11
 link: https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v
-picture: 2019-11-11.jpg
+picture: articles/2019-11-11.jpg
 ---
 
 During Hackers Congress Paralelni Polis (HCPP), I had a chance to interview Harry Halpin on AI, surveillance, collective intelligence and his latest project NYM.
