--- a/blockchain.topmonks.com/src/data/articles/2019-12-31.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-12-31.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-12-31
 link: https://btctip.cz/litecoin-pribeh-pokracuje-nebo-zvoni-umiracek/
-picture: 2019-12-31.jpg
+picture: articles/2019-12-31.jpg
 ---
 
 Litecoin se jako jeden z mála altcoinů drží již léta v kryptoměnové Top 10. Zatímco všemožné Paycoiny, Peercoiny či Namecoiny přicházejí a odcházejí, Litecoin se celou svou historii drží na pelotonu kryptoměn.
