--- a/blockchain.topmonks.com/src/data/podcasts/2019-10-16.md
+++ b/blockchain.topmonks.com/src/data/podcasts/2019-10-16.md
@@ -1,10 +1,10 @@
 ---
 title: Bitcoin’s security budget is adequate...for now
 author: Josef Tětek
-authorImage: https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg
+authorImage: avatar/josef-tetek.jpg
 published: 2019-10-16
 link: https://www.youtube.com/watch?v=YynzmTVyOa8
-picture: 2019-10-16.jpg
+picture: podcasts/2019-10-16.jpg
 ---
 
 Towards a theory of adequate mining rewards. While some analysts have tried to derive the appropriate security budget / mining rewards from the future Bitcoin marketcap, I offer a bottom-up approach of looking at the onchain transacted values.
