--- a/blockchain.topmonks.com/src/data/articles/2019-10-02.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-10-02.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-10-02
 link: https://www.alza.cz/bitcoin
-picture: 2019-10-02.jpg
+picture: articles/2019-10-02.jpg
 ---
 
 Proč a jak Bitcoin vlastně vznikl, jak se těží, jak a kde jej koupit, jak bitcoin bezpečně držet a kde s ním platit? Na tyto a mnohé další otázky odpovídá náš článek.
