--- a/blockchain.topmonks.com/src/data/articles/2019-10-22.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-10-22.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-10-22
 link: https://finmag.penize.cz/ekonomika/410356-ztracena-budoucnost-silenstvi-negativnich-urokovych-sazeb
-picture: 2019-10-22.jpg
+picture: articles/2019-10-22.jpg
 ---
 
 Mario Draghi nadělil k příležitosti svého odchodu snížení úroků do ještě hlubších úrovní a restart kvantitativního uvolňování. Samotná Evropská centrální banka pak cítila potřebu tweetovat, že tím nezpůsobí kolaps finančního systému. Jaké jsou a budou následky dlouhodobé politiky negativních sazeb?
