--- a/blockchain.topmonks.com/src/data/articles/2019-11-14.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-11-14.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-11-14
 link: https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/
-picture: 2019-11-14.jpg
+picture: articles/2019-11-14.jpg
 ---
 
 V <a title="První díl seriálu" href="https://btctip.cz/pujcte-si-penize-na-blockchainu-decentralizovane-a-bez-banky/">prvním dílu</a> seriálu jsme si vysvětlili základní účel MakerDAO – poskytnutí decentralizovaného stablecoinu DAI. <a title="Druhý díl seriálu" href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/">Druhý díl</a> zkoumal vztah mezi úrokovou mírou a cenou etheru a DAI. V posledním dílu si stručně projdeme dva další neduhy projektu, ale i vyzdvihneme kvalitně navržené mechanismy a podíváme se na budoucnost MakerDAO v podobě multi-collateral DAI.
