--- a/blockchain.topmonks.com/src/data/articles/2019-12-10.md
+++ b/blockchain.topmonks.com/src/data/articles/2019-12-10.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2019-12-10
 link: https://www.alza.cz/defi-financni-system-2-0
-picture: 2019-12-10.jpeg
+picture: articles/2019-12-10.jpeg
 ---
 
 Decentralizované finance neboli DeFi jsou poměrně nový termín, který poslední dobou rezonuje kryptoměnovou komunitou. O co se jedná, jaké problémy řeší a jaká je budoucnost finančních produktů bez prostředníka?
