--- a/caffe.topmonks.cz/src/data/events/2020-02-04.md
+++ b/caffe.topmonks.cz/src/data/events/2020-02-04.md
@@ -7,7 +7,7 @@ date: 04. února 2020 od 19.00 do 21.00
 address: Loft N8, Nekázanka 8, Praha 1
 mapLink: https://goo.gl/maps/TiqAbr4sRTB2
 link: https://www.meetup.com/TopMonks-Caffe/events/268214199/?fbclid=IwAR067h3Ijcm_ki9_lOVfJe2mRNuo6yLYyZkEmK3883tGK9l3CZfPHLVlH_s
-picture: empty.png
+picture: posters/empty.png
 presentationLink:
 videoLink:
 ---
