TM Caffe - link na Loft adresu

--- a/caffe.topmonks.cz/src/data/events/2020-03-03.md
+++ b/caffe.topmonks.cz/src/data/events/2020-03-03.md
@@ -3,7 +3,7 @@ sessionNumber: 67
 title: Hrátky s Flutterem
 shortTitle: Hrátky s Flutterem
 lecturers: Tomáš Tomucha Zvěřina, Jirka Pénzeš
-date: 03. března 2020 od 19.00 do 21.00
+date: 03. března 2020 <br>od 19.00 do 21.00
 address: Loft N8, Nekázanka 8, Praha 1
 mapLink: https://goo.gl/maps/TiqAbr4sRTB2
 link: https://www.meetup.com/TopMonks-Caffe/events/268652126/?rv=ea1_v2&_xtd=gatlbWFpbF9jbGlja9oAJDA3MzNjYjEwLThmOGItNGNhNC05ODhkLTFjMDQ5Y2RjOTYyYg
