Caffe TM poster - update

--- a/caffe.topmonks.cz/src/data/events/2020-04-07.md
+++ b/caffe.topmonks.cz/src/data/events/2020-04-07.md
@@ -6,7 +6,7 @@ lecturers: Jiří Filemon Fabián, Ondřej Krátký, Josef Tětek, Jakub Balada
 date: 07. dubna 2020 od 19.00 do 21.00
 address: V den konání události Vám dáme vědět, kam se připojit, takže Save the date!
 link: https://www.meetup.com/TopMonks-Caffe/events/269647341/
-picture: posters/2020-04-07.jpg
+picture: posters/2020-04-07-v2.jpg
 presentationLink:
 videoLink:
 ---
