Blockchain: HP - articles

--- a/blockchain.topmonks.com/src/data/articles/2020-01-26.md
+++ b/blockchain.topmonks.com/src/data/articles/2020-01-26.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2020-01-26
 link: https://www.alza.cz/rsk-bitcoinovy-smart-contract-sidechain
-picture: articles/josef-tet.jpg
+picture: articles/2020-01-26.jpg
 ---
 
 RSK či Rootstock je projekt, o kterém se v letech 2016–2017 hodně mluvilo v souvislosti se škálováním a možností chytrých kontraktů nad Bitcoinem. Během posledních dvou let bylo okolo projektu relativně ticho, nyní se vrací na scénu s pokusem naskočit na vlnu decentralizovaných financí. Jak RSK funguje, k čemu slouží, jak je momentálně použitelný a jak to vypadá s DeFi projektem Money on Chain?
