Blockchain Blog: Bitcoin pictures + articles

--- a/blockchain.topmonks.com/src/data/articles/2020-03-18.md
+++ b/blockchain.topmonks.com/src/data/articles/2020-03-18.md
@@ -4,7 +4,7 @@ author: Josef Tětek
 authorImage: avatar/josef-tetek.jpg
 published: 2020-03-18
 link: https://www.lupa.cz/clanky/josef-tetek-topmonks-myslenka-open-financi-nedavny-masakr-etherea-prezije/
-picture: articles/josef-tet.jpg
+picture: articles/2020-03-18.jpg
 ---
 
 Proč propad ceny Etherea z konce minulého týdne existenčně ohrozil největší současný projekt tzv. decentralizovaných financí v kryptoměnovém světě?
