--- a/caffe.topmonks.cz/src/data/events/2018-06-07.md
+++ b/caffe.topmonks.cz/src/data/events/2018-06-07.md
@@ -6,7 +6,7 @@ lecturers: Aleš Roubíček
 date: 7. června 2018
 address: Loft N8<br> Nekázanka 8, Praha 1
 mapLink: https://goo.gl/maps/TiqAbr4sRTB2
-link: 
+link: https://www.facebook.com/events/202892173682393/
 picture: posters/2018-06-07.jpg
 presentationLink:
 videoLink:
