[arx.monk.cloud] Latest news on HP generated from data

--- a/arx.monks.cloud/src/data/news/2020-05-15.md
+++ b/arx.monks.cloud/src/data/news/2020-05-15.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners nominated for the Central and Eastern Europe Deal of the Year Award and the Nagrody PSIK Private Equity Deal of the Year Award
 date: 2020-05-15
 originalUrl: https://www.arxequity.com/arx-equity-partners-nominated-for-the-central-and-eastern-europe-deal-of-the-year-award-and-the-nagrody-psik-private-equity-deal-of-the-year-award/
-image:
+image: news/2020-05-15.jpg
 ---
 
 ARX Equity Partners has been selected as a finalist for the second consecutive year for the Real Deals Central and Eastern Europe Deal of the Year Award for portfolio company Anwis. Last year, ARX Equity Partners won the Central and Eastern Europe Deal of the Year Award for VUES. Finalists for the Deal of the Year awards are established through research undertaken by Real Deals, in association with Cass Business School and Preqin.
